# amsf-app

./: .gitignore  AMSF.xlsx  DEPLOYMENT_SOP.md  OWNER_SETUP_CHECKLIST.md  README.md  activity.py  app_time.py  auth.py  backup_db_to_google_drive.py  database.py  mailer.py  main.py  migrate_db.py  money.py  pyproject.toml  run.sh  send_reminders.py
static/css/: style.css
static/js/: charts.js
systemd/: amsf-backup.service  amsf-backup.timer
templates/: admin.html  base.html  dashboard.html  forgot_password.html  investments.html  loans.html  login.html  reset_password.html  setup.html
