[project]
name = "amsf-app"
version = "0.1.0"
description = "AMSF Fund Management System"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "sqlalchemy>=2.0.30",
    "jinja2>=3.1.4",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.9",
    "pandas>=2.2.2",
    "openpyxl>=3.1.2",
    "aiosmtplib>=3.0.1",
    "python-dotenv>=1.0.1",
    "google-api-python-client>=2.140.0",
    "google-auth>=2.33.0",
    "google-auth-httplib2>=0.2.0"
]
